kubernetes-manisfests/clusterIP.yml
apiVersion: v1
kind: Service
metadata:
  name: dep-svc
spec:
  selector:
    app: deployment
     
  ports:
  - port: 8081
    targetPort: 8081
