kubernetes-manisfests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: dep-ingress
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: amir-dep.com
      http:
        paths: 
        - pathType: Prefix   
          path: /
          backend:
            service: 
             name: dep-svc
             port: 
                number: 8081
